@@ -6,6 +6,7 @@ Selenium 2 Beta 4
 * Deprecated get_page_source method. Use page_source property
 * Deprecated get_current_window_handle. Use current_window_handle property
 * Deprecated get_window_handles. Use window_handles property
+* Ability to install extensions into profiles
 
 Selenium 2 Beta 2
 
